Created Endpoints for getting sphere info and node tree, firebase config
