# src/main/java/io/github/skybby15/allround/DTO/Sphere/CreateSphereRequest.java
@@ -1,0 +1,9 @@
+package io.github.skybby15.allround.DTO.Sphere;
+
+import jakarta.validation.constraints.NotBlank;
+
+public record CreateSphereRequest(
+    @NotBlank String name
+){
+    
+}
